k3s/ingress/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`stats.home.net`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-grafana
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`argo.home.net`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
